generated/checker-for-evaluation/generated/test-Double-Free-e61dd678601eac53d501dda1eb1bcffec7b11bd6/build_logs/0/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:59: error: no matching function for call to ‘clang::ento::ProgramState::get<BucketsFreeCalled>() const’
   77 |     bool BucketsFreeCalled = State->get<BucketsFreeCalled>();
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:427:3: note: candidate: ‘template<class T> typename clang::ento::ProgramStateTrait<T>::data_type clang::ento::ProgramState::get() const’
  427 |   get() const {
      |   ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:427:3: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:59: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T> typename clang::ento::ProgramStateTrait<T>::data_type clang::ento::ProgramState::get() const’
   77 |     bool BucketsFreeCalled = State->get<BucketsFreeCalled>();
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:59: note:   expected a type, got ‘BucketsFreeCalled’
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:433:3: note: candidate: ‘template<class T> typename clang::ento::ProgramStateTrait<T>::lookup_type clang::ento::ProgramState::get(typename clang::ento::ProgramStateTrait<T>::key_type) const’
  433 |   get(typename ProgramStateTrait<T>::key_type key) const {
      |   ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:433:3: note:   template argument deduction/substitution failed:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:59: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T> typename clang::ento::ProgramStateTrait<T>::lookup_type clang::ento::ProgramState::get(typename clang::ento::ProgramStateTrait<T>::key_type) const’
   77 |     bool BucketsFreeCalled = State->get<BucketsFreeCalled>();
      |                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:77:59: note:   expected a type, got ‘BucketsFreeCalled’
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h: In instantiation of ‘static void clang::ento::check::EndFunction::_checkEndFunction(void*, const clang::ReturnStmt*, clang::ento::CheckerContext&) [with CHECKER = {anonymous}::SAGenTestChecker]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:264:22:   required from ‘static void clang::ento::check::EndFunction::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:526:22:   required from ‘static void clang::ento::Checker<CHECK1>::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker; CHECK1 = clang::ento::check::EndFunction]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:517:34:   required from ‘static void clang::ento::Checker<CHECK1, CHECKs>::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker; CHECK1 = clang::ento::check::PreCall; CHECKs = {clang::ento::check::EndFunction}]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:212:23:   required from ‘CHECKER* clang::ento::CheckerManager::registerChecker(AT&& ...) [with CHECKER = {anonymous}::SAGenTestChecker; AT = {}]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:108:36:   required from ‘static void clang::ento::CheckerRegistry::initializeManager(MGR&) [with MGR = clang::ento::CheckerManager; T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:132:15:   required from ‘void clang::ento::CheckerRegistry::addChecker(llvm::StringRef, llvm::StringRef, llvm::StringRef, bool) [with T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:113:40:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:257:49: error: no matching function for call to ‘{anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*&, clang::ento::CheckerContext&) const’
  257 |     ((const CHECKER *)checker)->checkEndFunction(RS, C);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:91:6: note: candidate: ‘void {anonymous}::SAGenTestChecker::checkEndFunction(clang::ento::CheckerContext&) const’
   91 | void SAGenTestChecker::checkEndFunction(CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:91:6: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:91:6: warning: ‘void {anonymous}::SAGenTestChecker::checkEndFunction(clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
